# MontOlympiad

./: .gitignore  CMakeLists.txt  README.md
src/: main  main.cpp  main.cpp.bak
src/.claude/: settings.local.json
src/data/: math-questions.json  statistics.json  users.json
src/headers/: auth.h  learn.h  menu.h  stats.h  test.h
src/sources/: auth.cpp  learn.cpp  menu.cpp  stats.cpp  test.cpp
